--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Media Queries</title>
 </head>
 <body>
-    
+    <header>
+        <div class="abc">1</div>
+        <div class="abc">2</div>
+    </header>
+    <section id="content">seccion amarilla</section>
+    <section id="articles">
+        <article>
+            <h2>Articulo 1</h2>
+        </article>
+        <article>
+            <h2>Articulo 2</h2>
+        </article>
+        <article>
+            <h2>Articulo 3</h2>
+        </article>
+        </section>
+
+    <section id="finales">
+        <article>
+            <h2>Articulo 2</h2>
+        </article>
+        <article>
+            <h2>Articulo 3</h2>
+        </article>
+        <article>
+            <h2>Articulo 2</h2>
+        </article>
+        <article>
+            <h2>Articulo 3</h2>
+        </article>
+        </section>
+
+
 </body>
 </html>
